--- a/package.json
+++ b/package.json
@@ -10,10 +10,25 @@
   "dependencies": {
     "axios": "^0.21.1",
     "dayjs": "^1.10.5",
+    "dotenv": "^10.0.0",
     "next": "11.0.0",
+    "nodemailer": "^6.6.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-textarea-autosize": "^8.3.3",
     "react-toastify": "^7.0.4"
-  }
+  },
+  "description": "",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/eddy-guo/technical-support.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/eddy-guo/technical-support/issues"
+  },
+  "homepage": "https://github.com/eddy-guo/technical-support#readme"
 }
